--- a/css/styles.css
+++ b/css/styles.css
@@ -8,3 +8,4 @@ body { font-family: Arial,Tahoma; color:#333; background: #eee; }
 #page h3 a { font-weight: normal; font-size: 16px; color:#004499; }
 #page h3 a:hover { color:#333; }
 
+.sample {}
