--- a/index_html_files/xr_fontsie.css
+++ b/index_html_files/xr_fontsie.css
@@ -1,2 +1,4 @@
 @import url(https://fonts.googleapis.com/css?family=Questrial:regular&subset=latin);
+@import url(https://fonts.googleapis.com/css?family=Poppins:500&subset=latin);
+@import url(https://fonts.googleapis.com/css?family=Poppins:300&subset=latin);
 @font-face {font-family: 'Verdana_xr';font-weight:normal;font-style:normal;src: url("XaraWDGeneratedHTMLfont1.woff") format("woff"), url("XaraWDEmbeddedHTMLfont1.eot?") format("embedded-opentype"), local('Verdana_xr');}
