--- a/index_html_files/custom_styles.css
+++ b/index_html_files/custom_styles.css
@@ -1,1 +1,1 @@
-.Normal_text {font-family:'Open Sans';font-weight:normal;font-style:normal;font-size:13px;text-decoration:none;color:#000000;background-color:Transparent;letter-spacing:0em;}
+.Normal_text {font-family:'Poppins';font-weight:300;font-style:normal;font-size:13px;text-decoration:none;color:#000000;background-color:Transparent;letter-spacing:0em;}
