--- a/index_html_files/xr_fontsie.css
+++ b/index_html_files/xr_fontsie.css
@@ -1,2 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Poppins:regular,700&subset=latin);
 @import url(https://fonts.googleapis.com/css?family=Poppins:500&subset=latin);
+@import url(https://fonts.googleapis.com/css?family=Russo+One:regular&subset=latin);
+@import url(https://fonts.googleapis.com/css?family=Questrial:regular&subset=latin);
